--- a/CommentSet/src/main/resources/application.yml
+++ b/CommentSet/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
     restart:
       enabled: true
       additional-paths: src/main/java
+  web:
+    resources:
+      static-locations: classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
+  mvc:
+    view:
+      prefix: classpath:/templates/
 logging:
   level:
     com.jancoyan.commentset.mapper: debug
