--- a/CommentSet/src/main/resources/application.yml
+++ b/CommentSet/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://101.201.64.102:3306/commentset
-#    url: jdbc:mysql://localhost:3306/commentset
+#    url: jdbc:mysql://101.201.64.102:3306/commentset
+    url: jdbc:mysql://localhost:3306/commentset
     username: root
     password: 333
   thymeleaf:
