--- a/FrontEnd/commentSet/CommentSet/manifest.json
+++ b/FrontEnd/commentSet/CommentSet/manifest.json
@@ -63,7 +63,8 @@
                 "speech" : {
                     "ifly" : {}
                 },
-                "ad" : {}
+                "ad" : {},
+                "oauth" : {}
             },
             "orientation" : [ "portrait-primary" ],
             "icons" : {
